changed flow stability to stability

--- a/app/templates/forward_2.html
+++ b/app/templates/forward_2.html
@@ -182,9 +182,9 @@
     <div class="row">
         <div class="col-md-12 twelve columns">
             <h1>Design Quality Metrics:</h1>
-            <p> As requested, the versatility and flow stability metric of the design was
+            <p> As requested, the versatility and stability metric of the design was
             calculated. Below, you can see the scores of and visualize the performance ranges of your
-            device (versatility) as well as how close the device is to a regime boundary (flow stability).
+            device (versatility) as well as how close the device is to a regime boundary (stability).
             More info on this methodology can be found here (Note: this link currently not active,
             publication is in review).
 
@@ -194,14 +194,14 @@
 
                 <tr>
                     <th colspan="3">{{metrics_results["verse_group"]}}:</th>
-                    <th colspan="2">Flow stability:</th>
+                    <th colspan="2">Stability:</th>
                 </tr>
                 <tr>
                     {# TODO: GROUP BY REGIME HERE #}
                     <th>Overall score</th>
                     <th>Size score</th>
                     <th>Rate score</th>
-                    <th>Flow stability score</th>
+                    <th>Stability score</th>
 
                 </tr>
                 <tr>
