--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -345,7 +345,7 @@
 								</div>
 								<div class="col-md-5 text-left">
 									<select class="cmbox" name="sort_by" id="sortByCombo">
-										<option value="1" selected>Flow Stability</option>
+										<option value="1" selected>Stability</option>
 										<option value="2">Overall versatility score</option>
                                         <option value="3">Size versatility score</option>
                                         <option value="4">Rate versatility score</option>
@@ -572,7 +572,7 @@
 								</div>
 								<div class="col-md-5 text-left">
 									<select class="cmbox" name="sort_by2" id="sortByCombo2" disabled>
-										<option value="1" selected>Flow Stability and Versatility</option>
+										<option value="1" selected>Stability and Versatility</option>
 										<option value="2">None</option>
 									</select>
 								</div>
