--- a/app/templates/backward_2.html
+++ b/app/templates/backward_2.html
@@ -214,11 +214,11 @@
     <div class="row">
         <div class="col-md-12 twelve columns">
             <h1>Design Quality Metrics:</h1>
-            <p>Using <strong>{{metrics_results["top_k"]}}</strong> candidate designs, the versatility and flow stability metrics of each candidate
+            <p>Using <strong>{{metrics_results["top_k"]}}</strong> candidate designs, the versatility and stability metrics of each candidate
                 generator was calculated. Output designs were ranked according to <strong>{{metrics_results["sort_by"]}}</strong>.
                 <strong><a href="{{url_for("nn.metrics_results", file_name=metrics_results["file_name"])}}">CLICK HERE</a></strong> to download the designs and quality metrics for all candidates.
                 Below, you can see the performance ranges of the top-ranked devices regime (versatility) as well as how
-                close the device is to a regime boundary (flow stability). More info on this methodology can be found
+                close the device is to a regime boundary (stability). More info on this methodology can be found
                 here (Note: this link currently not active, publication is in review).</p>
 
                         <h3>Droplet Generator Design:</h3>
@@ -227,14 +227,14 @@
 
                 <tr>
                     <th colspan="3">{{metrics_results["verse_group"]}}:</th>
-                    <th colspan="2">Flow stability:</th>
+                    <th colspan="2">Stability:</th>
                 </tr>
                 <tr>
                     {# TODO: GROUP BY REGIME HERE #}
                     <th>Overall score</th>
                     <th>Size score</th>
                     <th>Rate score</th>
-                    <th>Flow stability score</th>
+                    <th>Stability score</th>
 
                 </tr>
                 <tr>
