Small GUI fixes

--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -383,7 +383,7 @@
 									<input type="checkbox" id="innerWeightCheck" onclick="disableSlider(this.id, 'innerWeightRange', 'innerWeight');">
 								</div>
 								<div class="col-md-4 text-left">
-									<p class="field-tip">Inner droplet diameter weight<!--<span class="tip-content">unit in &#181;m</span>--></p>
+									<p class="field-tip">Inner diameter importance<!--<span class="tip-content">unit in &#181;m</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
 									<input type="range" min="0" max="100" value="50" class="slider" id="innerWeightRange" oninput="updateFloatInput(this.value, 'innerWeight', this.id);">
@@ -401,7 +401,7 @@
 									<input type="checkbox" id="outerWeightCheck" onclick="disableSlider(this.id, 'outerWeightRange', 'outerWeight');">
 								</div>
 								<div class="col-md-4 text-left">
-									<p class="field-tip">Outer droplet diameter weight<!--<span class="tip-content">unit in &#181;m</span>--></p>
+									<p class="field-tip">Outer diameter importance<!--<span class="tip-content">unit in &#181;m</span>--></p>
 								</div>
 								<div class="col-md-5 text-left">
 									<input type="range" min="0" max="100" value="50" class="slider" id="outerWeightRange" oninput="updateFloatInput(this.value, 'outerWeight', this.id);">
