--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -53,6 +53,23 @@
                         </div>
                     </div>
                     <div class="row vertical-spacer">
+                        <div class="col-md-6 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Karl.jpeg') }}"></div>
+                        <div class="col-md-6 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/suzanne.png') }}"></div>
+                    </div>
+                    <div class="row vertical-spacer">
+                        <div class="col-md-6 col-sm-12 text-center">
+                            <b>Suzanne Calhoun</b>
+                            <br/>Co-researcher
+                            <br/>sgkc@stanford.edu
+                        </div>
+                        <div class="col-md-6 col-sm-12 text-center">
+                            <b>Karl Krauth</b>
+                            <br/>Co-researcher
+                            <br/>kkt@stanford.edu
+                        </div>
+
+                    </div>
+                    <div class="row vertical-spacer">
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Doug.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/polly.png') }}"></div>
                         <div class="col-md-4 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Joshua.png') }}"></div>
