--- a/app/templates/team.html
+++ b/app/templates/team.html
@@ -54,7 +54,7 @@
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-6 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/suzanne.png') }}"></div>
-                        <div class="col-md-6 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/Karl.png') }}"></div>
+                        <div class="col-md-6 col-sm-12 text-center"><img class="img-team" src="{{ url_for('static', filename='img/karl.png') }}"></div>
                     </div>
                     <div class="row vertical-spacer">
                         <div class="col-md-6 col-sm-12 text-center">
