added datasets, fixed links

--- a/app/templates/backward_2.html
+++ b/app/templates/backward_2.html
@@ -287,7 +287,7 @@
                                                                                          src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
                     <a href='https://twitter.com/cidar_lab?lang=en' target="_blank"><img class="img-stakeholders"
                                                                                          src="{{ url_for('static', filename='img/twitter.png') }}"/></a>
-                    <a href='https://github.com/CIDARLAB/DAFD' target="_blank"><img class="img-stakeholders"
+                    <a href='https://github.com/CIDARLAB/dafd-website' target="_blank"><img class="img-stakeholders"
                                                                                     src="{{ url_for('static', filename='img/github.png') }}"/></a>
                 </div>
             </div>
