--- a/app/templates/datasets.html
+++ b/app/templates/datasets.html
@@ -36,6 +36,12 @@
             <ul>
                 <li><a href="{{ url_for('dataset6') }}">Flow rate calculation example for a flow-focusing geometry</a></li>
             </ul>
+            <h5>Fluid agnostic dataset</h5>
+            <ul>
+                <li><a href="{{ url_for('dataset12') }}">Datasets used for fluid agnostic prediction and design automation</a></li>
+            </ul>
+
+
         </div>
     </div>
     <div class="spacer"></div>
