--- a/app/templates/index_1.html
+++ b/app/templates/index_1.html
@@ -56,7 +56,7 @@
 			<span class='copyright'>Copyright 2020, CIDAR Lab - All Rights Reserved.</span>
 			<a href='https://www.youtube.com/user/cidarlab' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/youtube.png') }}"/></a>
 			<a href='https://twitter.com/cidar_lab?lang=en' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/twitter.png') }}"/></a>
-			<a href='https://github.com/CIDARLAB/DAFD' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/github.png') }}"/></a>
+			<a href='https://github.com/CIDARLAB/dafd-website' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/github.png') }}"/></a>
 		</div>
 	</div>
 </div>
