added download capability of DE solutions

--- a/app/templates/backward_3_de.html
+++ b/app/templates/backward_3_de.html
@@ -8,6 +8,8 @@
             <h4>Optimal Design Parameters</h4>
         </div>
     </div>
+    This results below are just for the solution with the lowest error. Alternative solutions can be downloaded by <a href="{{ url_for('de_solution', filename=filename) }}">clicking this link</a>.
+
     <div class="row">
         <div class="col-md-6 col-sm-6">
             <h5>Geometric parameters</h5>
