Updated datasets and fluid properties tabs

--- a/app/templates/datasets.html
+++ b/app/templates/datasets.html
@@ -12,7 +12,7 @@
             </div>
             <h5>Fluid agnostic dataset</h5>
             <ul>
-                <li><a href="{{ url_for('dataset12') }}">Comprehensive dataset on single and double emulsion generation</a></li>
+                <li><a href="{{ url_for('dataset12') }}">Comprehensive dataset on single and double emulsion generation</a> [<a href="https://osf.io/938rs/">OSF link</a>]</li>
             </ul>
             <h5>Datasets on Droplet Generation with DI Water and Mineral Oil</h5>
             <ul>
