--- a/app/templates/fluid_properties.html
+++ b/app/templates/fluid_properties.html
@@ -139,6 +139,42 @@
                     <td>2.82</td>
                     <td>4.61</td>
                 </tr>
+                <tr>
+                    <td>Surfactant-free HFE 7500 oil</td>
+                    <td>1.31</td>
+                    <td>Trimethylolpropane trimethacrylate (TMPTMA)</td>
+                    <td>42</td>
+                    <td>3.1</td>
+                </tr>
+                <tr>
+                    <td>Trimethylolpropane trimethacrylate (TMPTMA)</td>
+                    <td>42</td>
+                    <td>50% glycerol in water</td>
+                    <td>6</td>
+                    <td>15.3</td>
+                </tr>
+                <tr>
+                    <td>52% w/w glycerol in water (surfactant-free)</td>
+                    <td>7</td>
+                    <td>Silicone oil</td>
+                    <td>4.6</td>
+                    <td>29</td>
+                </tr>
+                <tr>
+                    <td>52% w/w glycerol in water + 50 mM dodecyltrimethylammonium bromide</td>
+                    <td>7</td>
+                    <td>Silicone oil</td>
+                    <td>4.6</td>
+                    <td>10</td>
+                </tr>
+                <tr>
+                    <td>52% w/w glycerol in water + 5 mM hexadecyltrimethylammonium bromide</td>
+                    <td>7</td>
+                    <td>Silicone oil</td>
+                    <td>4.6</td>
+                    <td>7.3</td>
+                </tr>
+
             </table>
             </body>
             </html>
