Added DR logo to website

--- a/app/templates/backward_2.html
+++ b/app/templates/backward_2.html
@@ -278,6 +278,8 @@
                                             src="{{ url_for('static', filename='img/BDC.png') }}"/></a>
                     <a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders"
                                                                       src="{{ url_for('static', filename='img/BU.png') }}"/></a>
+                    <a href='https://www.damonrunyon.org/' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/DR LOGO_xtralarge.png') }}"/></a>
+
                     <a href='https://www.stanford.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford_logo.png') }}"/></a>
 
                 </div>
