--- a/app/templates/index_3.html
+++ b/app/templates/index_3.html
@@ -50,6 +50,7 @@
 			<a href='http://cidarlab.org' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/logo-Cidar-Color-small.png') }}"/></a>
 			<a href='https://www.damplab.org' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/damp-lab-logo-2x_1.png') }}"/></a>
 			<a href='https://www.bu.edu/kilachandcenter/the-centers/biological-design-center/' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BDC.png') }}"/></a>
+			<a href='https://www.damonrunyon.org/' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/DR LOGO_xtralarge.png') }}"/></a>
 			<a href='https://www.bu.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/BU.png') }}"/></a>
 			<a href='https://www.stanford.edu' target="_blank"><img class="img-stakeholders" src="{{ url_for('static', filename='img/stanford_logo.png') }}"/></a>
         </div>
