--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,9 +37,9 @@
 				</div>
 			</div>-->
 			<div class="row md-spacer">
-                <div class="col-md-4"><div class="btn-1" onclick=location.href="{{ url_for('index_1') }}">DAFD 1.0 <br> (Lashkaripour et al., 2021)</div></div>
-				<div class="col-md-4"><div class="btn-2" onclick=location.href="{{ url_for('index_2') }}">DAFD 2.0 <br> (McIntyre et al., in review)</div></div>
-				<div class="col-md-4"><div class="btn-3" onclick=location.href="{{ url_for('index_3') }}">DAFD 3.0 <br> (Lashkaripour et al., in preparation)</div></div>
+                <div class="col-md-4"><div class="btn-1" onclick=location.href="{{ url_for('index_1') }}">DAFD 1.0 <br> (Lashkaripour et al., Nature Comms., 2021)</div></div>
+				<div class="col-md-4"><div class="btn-2" onclick=location.href="{{ url_for('index_2') }}">DAFD 2.0 <br> (McIntyre et al., Lab on a Chip, 2023)</div></div>
+				<div class="col-md-4"><div class="btn-3" onclick=location.href="{{ url_for('index_3') }}">DAFD 3.0 <br> (Lashkaripour et al., Nature Comms., 2024)</div></div>
 
 
 
